@@ -5,6 +5,7 @@ XXX
 	This release
 	- does not allow opening pmem pool without unsafe shoutdown counter if not explicitly disabled
 	- remove support for build time define NO_LIBPTHREAD
+	- Exclude Valgrind checks during compilation time when VG_XXX_ENABLED is set to 0
 
 Mon Dec 4 2023 Oksana Sałyk <oksana.salyk@intel.com>
 
